samples/_failures_safe/1761418867_c437fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ffb956f8.c: In function ‘main’:
./samples/SAFE/__tmp_ffb956f8.c:154:22: error: expected ‘;’ at end of input
  154 |                 break
      |                      ^
      |                      ;
./samples/SAFE/__tmp_ffb956f8.c:154:17: error: expected declaration or statement at end of input
  154 |                 break
      |                 ^~~~~
./samples/SAFE/__tmp_ffb956f8.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ffb956f8.c:154:17: error: expected declaration or statement at end of input
